--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
 			"ip": "192.168.4.200",
 			"port": 5678
 		},
-		"speed": "18"
+		"speed": "18",
+		"whitebalance": ""
 	},
 	"osc_port": 8765
 }
